--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,5 @@
 {
 	"version": 2,
-	"builds": [
-		{
-			"src": "./server.js",
-			"use": "@vercel/node"
-		}
-	],
-	"routes": [
-		{
-			"src": "/api/(.*)",
-			"dest": "/routes/$1"
-		}
-	]
+	"builds": [{ "src": "./index.js", "use": "@vercel/node" }],
+	"routes": [{ "src": "/(.*)", "dest": "/" }]
 }
