--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"start": "node index.js"
 	},
-	"author": "",
+	"author": "Ali Adel",
 	"license": "ISC",
 	"description": ""
 }
